--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="body">
   <div class="uk-container">
-    <h2 class="uk-text-center">Aisbir Cubes</h2>
+    <h2 class="uk-text-center">Razon Cubes</h2>
     <p class="uk-text-center" style="margin-top: -19px;">Found Your Favorite Product? Buy Now</p>
     <form class="uk-form-stacked uk-margin-medium" action="/request/api/submit" method="get">
       <div class="uk-margin">
